<resources>
    <string name="app_name">OpenpayTest</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Movies</string>
    <string name="title_dashboard">Locations</string>
    <string name="title_notifications">Gallery</string>

    <string name="label_popular">Popular</string>
    <string name="label_top_rated">Top Rated</string>
    <string name="label_most_rated">Most Rated</string>
    <string name="label_images">Images</string>
    <string name="label_upload_image">Upload</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_error">Error</string>
    <string name="label_exception">Exception</string>

    <string name="label_done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>