<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sngular.openpaytest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.sngular.openpaytest.ui.movies.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.sngular.openpaytest.ui.locations.PeopleLocationFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.sngular.openpaytest.ui.gallery.GalleryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_gallery" />


</navigation>